<resources>
    <string name="app_name">my calculator</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="Per">%</string>
    <string name="ac">AC</string>
    <string name="Devide">/</string>
    <string name="Minus">-</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="Equal">=</string>
    <string name="back">Back</string>
    <string name="Mult">*</string>
    <string name="Dot">.</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
</resources>
