<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rabiul.mycalculator.MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="379dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/button"
        android:layout_width="841dp"
        android:layout_height="50dp"
        android:layout_marginStart="216dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button2"
        android:layout_width="129dp"
        android:layout_height="46dp"
        android:text="@string/_2"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:text="@string/_3"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="302dp" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="303dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintStart_toStartOf="parent"

        tools:layout_editor_absoluteY="302dp" />


    <Button
        android:id="@+id/button7"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:text="@string/_9"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="437dp" />


    <Button
        android:id="@+id/button11"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:text="@string/Dot"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="437dp" />


    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="236dp"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:text="@string/Minus"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mult"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="231dp" />


    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/Devide"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />


    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Per"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="167dp" />


    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:text="@string/Equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="167dp" />


    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>
